ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shrink-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shrinklink-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shrinklink
                port:
                  number: 1212
  defaultBackend:
    service:
      name: shrinklink-frontend
      port:
        number: 80
